--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Akeem Allen",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "nodegit": "^0.27.0"
   }
 }
