--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Akeem Allen",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "inquirer-prompt-suggest": "^0.1.0",
+    "q": "^1.5.1"
   }
 }
