--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^7.3.3",
-    "nodegit": "^0.27.0",
-    "python-shell": "^2.0.2",
     "inquirer-prompt-suggest": "^0.1.0",
+    "nodegit": "^0.27.0",
+    "nodemailer": "^6.4.16",
+    "python-shell": "^2.0.2",
     "q": "^1.5.1"
   }
 }
